# server/internal/modules/chat/dto.go
@@ -1,13 +1,5 @@
 package chat
 
-type CreateFirstConversationPayload struct {
-	UserID  string
-	Title   string
-	Message string
-}
-
-type CreateMessagePayload struct {
-	ConversationID string
-	Content        string
-	Role           string
+type StartConversationDTO struct {
+	Message string `json:"message" validate:"required"`
 }
